# C-Plus-Plus-Projects

./: CMakeLists.txt  README.md  build_proj.sh
src/app/: CMakeLists.txt  main.cpp
src/lib/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
src/test/: CMakeLists.txt  test_main.cpp
